chore(KIBON-3025): fix table spacing

--- a/ebegu-web/src/style/molecules/table.less
+++ b/ebegu-web/src/style/molecules/table.less
@@ -496,11 +496,11 @@ table, .table > tbody, .table > thead, .table > thead:first-child, .dv-table mat
         }
     }
 
-    mat-cell.mat-cell, mat-header-cell.mat-mdc-header-cell, mat-footer-cell {
+    mat-cell.mat-mdc-cell, mat-header-cell.mat-mdc-header-cell, mat-footer-cell {
         flex: 2;
     }
 
-    mat-cell.mat-cell:last-of-type {
+    mat-cell.mat-mdc-cell:last-of-type {
         padding-right: 6px;
     }
 
